--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>PAGINATION</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
+    <div class="container">
+      <form class="form js-form">
+        <label>
+          <input
+            type="text"
+            name="search-text"
+            placeholder="Search images..."
+            class="input"
+          />
+        </label>
+        <button type="submit" class="submit-btn">Search</button>
+      </form>
+      <div class="loading-text-container">
+        <span class="loading-imgs-text js-loading-imgs-text hidden"
+          >Loading images, please wait...</span
+        >
+      </div>
+      <ul class="gallery js-gallery"></ul>
+      <button class="load-more-btn js-load-more-btn hidden">Load more</button>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
