fix class loader

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <button type="submit" class="submit-btn">Search</button>
       </form>
       <div class="loading-text-container">
-        <span class="loading-imgs-text js-loading-imgs-text hidden"
+        <span class="loader js-loader hidden"
           >Loading images, please wait...</span
         >
       </div>
